docs(swagger): comments and files added
